--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
+    "typescript": "^4.9.5",
     "vite": "^3.2.0"
   }
 }
